# GlobalProgramLib

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build-test.yml
examples/sync/: tkinter_language_picker_message.py
globalprogramlib/scripts/: globalprogramlib_coverage.py
globalprogramlib/utils/: errors.py
globalprogramlib/v1/: __init__.py
scripts/: globalprogramlib_coverage.py
tests/data/: en.json  pt.json
tests/data/invalid/: it.json
tests/v1/: conftest.py  test_v1.py
