[tool.poetry]
name = "globalprogramlib"
version = "0.0.1"
description = "The library you need for writting multilingual applications"
authors = ["PWRScript <powerofthescript@outlook.com>"]
maintainers = ["PWRScript <powerofthescript@outlook.com>"]
license = "MIT"

homepage = "https://github.com/PWRScript/globalprogramlib"
repository = "https://github.com/PWRScript/globalprogramlib"

readme = "README.md"
keywords = ["language", "global", "translator", "multilingual"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
globalprogramlib_coverage = 'globalprogramlib.scripts.globalprogramlib_coverage:main'

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
aiofiles = "^0.8.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.1", python = ">=3.6.2"}
pytest-asyncio = "^0.16.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
